--- a/index.html
+++ b/index.html
@@ -5,9 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myFirstLayout</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,500&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <img  src="assets/images/maskgroup.png" alt="imagen de fondo">
+        </div>
+        <nav>
+            <img class="logo" src="assets/images/indexedlogo.png" alt="logo">
+            <ol>
+                <ul>
+                    <a>Home</a>
+                    <a>Pricing</a>
+                    <a>Newsletter</a>
+                    <a>Sign Up</a>
+                </ul>
+            </ol>
+        </nav>
+        <div1>
+            <h1>Pricing made easy</h1>
+            <p>Transparent pricing to help you make the right choice. With <strong>30-day</strong></p>
+            <p1><strong>money back guarantee.</strong></p1>
+        </div1>
+    </header>
+
+    <main>
+        <section>
+            <article1>
+                <h2>Starter Plan</h2>
+                <h2>$6.99/mo</h2>
+                <h3>$83.88 billed anually</h3>
+                <button class="boton-azul">Start Indexing --></button>
+                <ul>
+                    <li>5,000 Index requests per month.</li>
+                    <li>1 Tem member only.</li>
+                    <li>.json export</li>
+                    <li>No subdomains allowed.</li>
+                    <li>Queque enabled.</li>
+                    <li>20s avg. response time.</li>
+                </ul>
+            </article1>
+
+            <article2>
+                <h2>Advanced Plan</h2>
+                <h2>12.99/mo</h2>
+                <h3>$155.88 billed anually</h3>
+                <button>Start Indexing --></button>
+                <ul>
+                    <li>All starter plan features.</li>
+                    <li>5 team members.</li>
+                    <li>.json and xml export.</li>
+                    <li>Subdomains allowed.</li>
+                    <li>No queque.</li>
+                    <li>5s abg. response time.</li>
+                </ul>
+            </article2>
+
+            <article3>
+                <h2>Pro Plan</h2>
+                <h2>20.99/mo</h2>
+                <h3>$440.78 billed anually</h3>
+                <button class="boton-azul">Start Indexing --></button>
+                <ul>
+                    <li>All advanced plan features.</li>
+                    <li>Unlimited requests per/mo.</li>
+                    <li>All file types exports.</li>
+                    <li>Subdomains allowed.</li>
+                    <li>No queque.</li>
+                    <li>Instant response.</li>
+                </ul>
+            </article3>
+        </section>
+    </main>
 </body>
 </html>
