Cambios ultima hora

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </nav>
         <div1>
             <h1>Pricing made easy</h1>
-            <p>Transparent pricing to help you make the right choice. With <strong>30-day</strong></p>
-            <p1><strong>money back guarantee.</strong></p1>
+            <p>Transparent pricing to help you make the right choice. With <strong class="letra-morada">30-day</strong></p>
+            <p1><strong class="letra-morada">money back guarantee.</strong></p1>
         </div1>
     </header>
 
